# Psycho-DensePose

./: .gitignore  Cargo.toml  README.md
crates/psycho-agents/: Cargo.toml
crates/psycho-agents/src/: agent.rs  copywriter.rs  interpreter.rs  lib.rs  orchestrator.rs  prompts.rs  strategist.rs
crates/psycho-api/: Cargo.toml
crates/psycho-api/src/: config.rs  lib.rs
crates/psycho-core/: Cargo.toml
crates/psycho-core/src/: error.rs  geometry.rs  kinematics.rs  lib.rs  ocean.rs  types.rs
crates/psycho-csi/: Cargo.toml
crates/psycho-csi/benches/: csi_processing.rs
crates/psycho-csi/src/: acquisition.rs  doppler.rs  filtering.rs  lib.rs  packet.rs  pipeline.rs  sanitizer.rs
crates/psycho-densepose/: Cargo.toml
crates/psycho-densepose/src/: backbone.rs  distillation.rs  encoder.rs  heads.rs  inference.rs  lib.rs  model.rs  roi.rs
crates/psycho-frontend/: Cargo.toml  index.html  styles.css
crates/psycho-frontend/shaders/: heatmap.wgsl  heatmap_display.wgsl  skeletal.wgsl
crates/psycho-frontend/src/: app.rs  lib.rs  main.rs
crates/psycho-frontend/src/components/: mod.rs
crates/psycho-frontend/src/gpu/: mod.rs  pipeline.rs  renderer.rs  skeletal.rs  trajectory.rs
crates/psycho-frontend/src/network/: mod.rs
crates/psycho-frontend/src/pages/: admin.rs  dashboard.rs  mod.rs  visualizer.rs
crates/psycho-frontend/src/shaders/: mod.rs
crates/psycho-frontend/src/state/: mod.rs
crates/psycho-frontend/src/utils/: mod.rs
crates/psycho-lma/: Cargo.toml
crates/psycho-lma/src/: analyzer.rs  effort.rs  hesitation.rs  lib.rs  metrics.rs  ocean_mapper.rs  space.rs
crates/psycho-privacy/: Cargo.toml
crates/psycho-privacy/src/: handshake.rs  lib.rs
migrations/: 001_init.sql  002_indexes.sql
