[package]
name = "psycho-densepose"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WiFi-to-DensePose modality translation using deep learning"

[dependencies]
psycho-core = { path = "../psycho-core" }
psycho-csi = { path = "../psycho-csi" }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Numeric
ndarray = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }

# ML Framework (Candle for pure Rust inference)
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

# Utilities
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "densepose_inference"
harness = false
